# agentic-legal-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/eval/: scenarios.jsonl
docs/: comprehensive_summary_report.md  manual-answer-audit.md  ragas-50-results.md  session-audit-2026-07-12.md  why-naive-rag-fails.md
frontend/: app.py
notebooks/: 01_data_exploration.ipynb  02_retrieval_ablation.ipynb  03_eval_dashboard.ipynb
src/agent/: graph.py  llm.py  state.py
src/agent/nodes/: checker.py  citation_validator.py  fast_path.py  generator.py  grader.py  intent_expander.py  ood_gate.py  rewriter.py  router.py
src/agent/prompts/: README.md  checker.txt  generator.txt  grader.txt  intent_expander.txt  rewriter.txt  router.txt
src/api/: main.py  routes.py
src/eval/: aibe_eval.py  mcq_eval.py  ragas_eval.py  retrieval_baseline.py  section_precision.py  smoke_gate.py
src/ingest/: chunk_chonkie.py  enrich_metadata.py  parse_pdf.py
src/models/: schemas.py
src/retrieval/: hybrid.py  index.py  rerank.py
tests/: test_agent_nodes.py  test_api.py  test_chunking.py  test_enrich.py  test_eval_harness.py  test_eval_metrics.py  test_frontend.py  test_graph.py  test_ingest.py  test_llm_backend.py  test_retrieval.py  test_retrieval_baseline.py
